# 2025_thesis_guides

./: .gitignore  README.md  pyproject.toml  setup.cfg
scripts/technical/: building.sh
