[metadata]
name = thesis_guide
description = ...
author = <name>
license = MIT
license_file = LICENSE
platforms = linux
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package =
    thesis_guide
install-requires =
    ...
python_requires = >=3.7
package_dir = =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
thesis_guide = py.typed

[flake8]
max-line-length = 80
extend-ignore = E266
exclude = .git,.venv,data

